--- a/realworld-cicd-pipeline-project-main/Jenkinsfile
+++ b/realworld-cicd-pipeline-project-main/Jenkinsfile
@@ -6,7 +6,7 @@ def COLOR_MAP = [
 pipeline {
   agent any
   environment {
-    WORKSPACE = "${env.WORKSPACE}"
+    WORKSPACE = "${env.WORKSPACE}"/realworld-cicd-pipeline-project-main"
     NEXUS_CREDENTIAL_ID = 'Nexus-Credential'
     //NEXUS_USER = "$NEXUS_CREDS_USR"
     //NEXUS_PASSWORD = "$Nexus-Token"
@@ -65,13 +65,13 @@ pipeline {
             }
         }
     }
-    stage('SonarQube GateKeeper') {
-        steps {
-          timeout(time : 1, unit : 'HOURS'){
-          waitForQualityGate abortPipeline: true
-          }
-       }
-    }
+    // stage('SonarQube GateKeeper') {
+    //     steps {
+    //       timeout(time : 1, unit : 'HOURS'){
+    //       waitForQualityGate abortPipeline: true
+    //       }
+    //    }
+    // }
     stage("Nexus Artifact Uploader"){
         steps{
            nexusArtifactUploader(
