--- a/realworld-cicd-pipeline-project-main/Jenkinsfile
+++ b/realworld-cicd-pipeline-project-main/Jenkinsfile
@@ -6,7 +6,7 @@ def COLOR_MAP = [
 pipeline {
   agent any
   environment {
-    WORKSPACE = "${env.WORKSPACE}"/realworld-cicd-pipeline-project-main"
+    WORKSPACE = "${env.WORKSPACE}/realworld-cicd-pipeline-project-main"
     NEXUS_CREDENTIAL_ID = 'Nexus-Credential'
     //NEXUS_USER = "$NEXUS_CREDS_USR"
     //NEXUS_PASSWORD = "$Nexus-Token"
@@ -22,7 +22,9 @@ pipeline {
   stages {
     stage('Build') {
       steps {
+        dir('realworld-cicd-pipeline-project-main/') {
         sh 'mvn clean package'
+        }
       }
       post {
         success {
@@ -33,17 +35,23 @@ pipeline {
     }
     stage('Unit Test'){
         steps {
-            sh 'mvn test'
+         dir('realworld-cicd-pipeline-project-main/') {
+         sh 'mvn test'
+         }
         }
     }
     stage('Integration Test'){
         steps {
+         dir('realworld-cicd-pipeline-project-main/') {
           sh 'mvn verify -DskipUnitTests'
+        }
         }
     }
     stage ('Checkstyle Code Analysis'){
         steps {
+            dir('realworld-cicd-pipeline-project-main/') {
             sh 'mvn checkstyle:checkstyle'
+        }
         }
         post {
             success {
@@ -53,6 +61,7 @@ pipeline {
     }
     stage('SonarQube Inspection') {
         steps {
+            dir('realworld-cicd-pipeline-project-main/') {
             withSonarQubeEnv('SonarQube') { 
                 withCredentials([string(credentialsId: 'SonarQube-Token', variable: 'SONAR_TOKEN')]) {
                 sh """
@@ -63,16 +72,19 @@ pipeline {
                 """
                 }
             }
+            }
         }
     }
-    // stage('SonarQube GateKeeper') {
-    //     steps {
-    //       timeout(time : 1, unit : 'HOURS'){
-    //       waitForQualityGate abortPipeline: true
-    //       }
-    //    }
-    // }
-    stage("Nexus Artifact Uploader"){
+/*
+    stage('SonarQube GateKeeper') {
+        steps {
+          timeout(time : 1, unit : 'HOURS'){
+          waitForQualityGate abortPipeline: true
+          }
+       }
+    }
+ */
+	stage("Nexus Artifact Uploader"){
         steps{
            nexusArtifactUploader(
               nexusVersion: 'nexus3',
@@ -96,9 +108,11 @@ pipeline {
             HOSTS = 'dev'
         }
         steps {
+            dir('realworld-cicd-pipeline-project-main/') {
             withCredentials([usernamePassword(credentialsId: 'Ansible-Credential', passwordVariable: 'PASSWORD', usernameVariable: 'USER_NAME')]) {
                 sh "ansible-playbook -i ${WORKSPACE}/ansible-config/aws_ec2.yaml ${WORKSPACE}/deploy.yaml --extra-vars \"ansible_user=$USER_NAME ansible_password=$PASSWORD hosts=tag_Environment_$HOSTS workspace_path=$WORKSPACE\""
             }
+          }
         }
     }
     stage('Deploy to Staging Env') {
@@ -106,8 +120,10 @@ pipeline {
             HOSTS = 'stage'
         }
         steps {
+            dir('realworld-cicd-pipeline-project-main/') {
             withCredentials([usernamePassword(credentialsId: 'Ansible-Credential', passwordVariable: 'PASSWORD', usernameVariable: 'USER_NAME')]) {
                 sh "ansible-playbook -i ${WORKSPACE}/ansible-config/aws_ec2.yaml ${WORKSPACE}/deploy.yaml --extra-vars \"ansible_user=$USER_NAME ansible_password=$PASSWORD hosts=tag_Environment_$HOSTS workspace_path=$WORKSPACE\""
+            }
             }
         }
     }
@@ -121,19 +137,20 @@ pipeline {
             HOSTS = 'prod'
         }
         steps {
+           dir('realworld-cicd-pipeline-project-main/') {
             withCredentials([usernamePassword(credentialsId: 'Ansible-Credential', passwordVariable: 'PASSWORD', usernameVariable: 'USER_NAME')]) {
                 sh "ansible-playbook -i ${WORKSPACE}/ansible-config/aws_ec2.yaml ${WORKSPACE}/deploy.yaml --extra-vars \"ansible_user=$USER_NAME ansible_password=$PASSWORD hosts=tag_Environment_$HOSTS workspace_path=$WORKSPACE\""
             }
+           }
+        }
          }
       }
-   }
   post {
     always {
         echo 'Slack Notifications.'
-        slackSend channel: 'innovative-batch-pipeline-alerts', //update and provide your channel name
+        slackSend channel: '#innovative-batch-pipeline-alerts', //update and provide your channel name
         color: COLOR_MAP[currentBuild.currentResult],
         message: "*${currentBuild.currentResult}:* Job Name '${env.JOB_NAME}' build ${env.BUILD_NUMBER} \n Build Timestamp: ${env.BUILD_TIMESTAMP} \n Project Workspace: ${env.WORKSPACE} \n More info at: ${env.BUILD_URL}"
     }
   }
 }
-
