--- a/realworld-cicd-pipeline-project-main/Jenkinsfile
+++ b/realworld-cicd-pipeline-project-main/Jenkinsfile
@@ -10,7 +10,7 @@ pipeline {
     NEXUS_CREDENTIAL_ID = 'Nexus-Credential'
     //NEXUS_USER = "$NEXUS_CREDS_USR"
     //NEXUS_PASSWORD = "$Nexus-Token"
-    //NEXUS_URL = "172.31.58.111:8081"
+    //NEXUS_URL = "172.31.18.62:8081"
     //NEXUS_REPOSITORY = "maven_project"
     //NEXUS_REPO_ID    = "maven_project"
     //ARTVERSION = "${env.BUILD_ID}"
@@ -29,7 +29,7 @@ pipeline {
       post {
         success {
           echo ' now Archiving '
-          archiveArtifacts artifacts: '**/*.war'
+          archiveArtifacts artifacts: '/*.war'
         }
       }
     }
@@ -82,8 +82,9 @@ pipeline {
     //       }
     //    }
     // }
-       stage("Nexus Artifact Uploader"){
+    stage("Nexus Artifact Uploader"){
         steps{
+            dir('realworld-cicd-pipeline-project-main/') {
            nexusArtifactUploader(
               nexusVersion: 'nexus3',
               protocol: 'http',
@@ -95,10 +96,11 @@ pipeline {
               artifacts: [
                   [artifactId: 'webapp',
                   classifier: '',
-                  file: "${WORKSPACE}/webapp/target/webapp.war",
+                  file: "${WORKSPACE}/webapp/target/webapp.war",   
                   type: 'war']
               ]
            )
+            }
         }
     }
     stage('Deploy to Development Env') {
@@ -112,6 +114,7 @@ pipeline {
             }
           }
         }
+
     }
     stage('Deploy to Staging Env') {
         environment {
@@ -148,7 +151,7 @@ pipeline {
         echo 'Slack Notifications.'
         slackSend channel: 'innovative-batch-pipeline-alerts', //update and provide your channel name
         color: COLOR_MAP[currentBuild.currentResult],
-        message: "*${currentBuild.currentResult}:* Job Name '${env.JOB_NAME}' build ${env.BUILD_NUMBER} \n Build Timestamp: ${env.BUILD_TIMESTAMP} \n Project Workspace: ${env.WORKSPACE} \n More info at: ${env.BUILD_URL}"
+        message: "${currentBuild.currentResult}: Job Name '${env.JOB_NAME}' build ${env.BUILD_NUMBER} \n Build Timestamp: ${env.BUILD_TIMESTAMP} \n Project Workspace: ${env.WORKSPACE} \n More info at: ${env.BUILD_URL}"
     }
   }
 }
